--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,16 +9,16 @@ html {
 }
 
 .blurple {
-  color: #7289da;
+  color: #ffd900;
 }
 
 .bg-base {
-  background-color: #1a2634 !important;
+  background-color: #610303 !important;
 }
 
 #backtotop {
   display: inline-block;
-  background-color: #7289da;
+  background-color: #ffd900;
   width: 50px;
   height: 50px;
   text-align: center;
@@ -56,12 +56,12 @@ html {
 
 .navbar-item:hover {
   background-color: transparent !important;
-  color: #7289da !important;
+  color: #ffd900 !important;
 }
 
 .navbar-link:hover {
   background-color: transparent !important;
-  color: #7289da !important;
+  color: #ffd900 !important;
 }
 
 .navbar-menu {
@@ -94,12 +94,12 @@ html {
 
 nav,
 .navbar-menu {
-  background-color: #1a2634 !important;
+  background-color: #610303 !important;
 }
 
 .navbar-item.nav-dark,
 .navbar-link.nav-dark {
-  color: #363636 !important;
+  color: #fff !important;
 }
 
 .navbar-item,
@@ -108,12 +108,12 @@ nav,
 }
 
 nav.nav-w {
-  background: #fff !important;
+  background: #751818 !important;
   box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.1) !important;
 }
 
 .nav-w {
-  background: #fff !important;
+  background: #751818 !important;
   box-shadow: 100px 2px 10px rgba(0, 0, 0, 0.1) !important;
 }
 
@@ -165,7 +165,7 @@ nav.nav-w {
 }
 
 .line.blurple {
-  background: #7289da;
+  background: #ffd900;
 }
 
 .title.lined {
@@ -192,7 +192,7 @@ nav.nav-w {
 }
 
 .button.is-blurple {
-  background-color: #7289da;
+  background-color: #ffd900;
   border-color: transparent;
   color: #fff;
 }
